--- a/app.json
+++ b/app.json
@@ -34,16 +34,12 @@
       
       },
 
-    "PHONE": {
+    "PHONE_NUMBER": {
 
       "description": "Get your phone number",
 
       "value": ""
       
-    }
-
+     }
   }
-
- }
-
 }
