--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
 
   "env": {
 
-    "BOT_TOKEN": {
+    "bot_token": {
 
       "description": "Your bot token, as a string.",
 
@@ -18,7 +18,7 @@
 
     },
 
-    "API_ID": {
+    "api_id": {
 
       "description": "Get this value from https://my.telegram.org",
 
@@ -26,7 +26,7 @@
 
     },
 
-    "API_HASH": {
+    "api_hash": {
 
       "description": "Get this value from https://my.telegram.org",
 
@@ -34,7 +34,7 @@
       
       },
 
-    "PHONE_NUMBER": {
+    "phone_number": {
 
       "description": "Get your phone number",
 
